--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "css-loader": "^7.1.2",
+    "docenv": "^2.0.6",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "list": "^2.0.19",
