--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 3002
-REACT_APP_BACK_END_URL = 'https://survey-be-app-production.up.railway.app'
+REACT_APP_BACK_END_URL = https://survey-be-app-production.up.railway.app
